{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 46,
  "lineage": "06a7b085-0cb6-533c-f7c0-4e0063bc2b90",
  "resources": [
    {
      "module": "module.my-ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dc8d444ee2a42d8a",
            "arn": "arn:aws:ec2:eu-west-1:560460596452:instance/i-002010561ec1c0a1f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-002010561ec1c0a1f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "install_vm_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e4cd276becec44ae",
            "private_dns": "ip-10-0-1-248.eu-west-1.compute.internal",
            "private_ip": "10.0.1.248",
            "public_dns": "ec2-54-75-100-228.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.75.100.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04dabe234b0b4bcff",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dc0e9398f711cb31",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02bb8cf2a838f3090"
            ]
          },
          "dependencies": [
            "module.my-ec2.aws_key_pair.install_vm_key",
            "module.my-ec2.aws_security_group.install_sg",
            "module.my-vpc.aws_subnet.subnet_a"
          ]
        }
      ]
    },
    {
      "module": "module.my-ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "test_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dc8d444ee2a42d8a",
            "arn": "arn:aws:ec2:eu-west-1:560460596452:instance/i-0c5eaa25f17e229f9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c5eaa25f17e229f9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test_vm_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e98b9a8d28b582e5",
            "private_dns": "ip-10-0-1-93.eu-west-1.compute.internal",
            "private_ip": "10.0.1.93",
            "public_dns": "ec2-34-244-157-118.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.244.157.118",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d8cbfd1d846dd8ff",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dc0e9398f711cb31",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04ebd6403e0689ef4"
            ]
          },
          "dependencies": [
            "module.my-ec2.aws_key_pair.test_vm_key",
            "module.my-ec2.aws_security_group.jenkinstotest_sg",
            "module.my-vpc.aws_subnet.subnet_a",
            "module.my-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my-ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "install_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:560460596452:security-group/sg-02bb8cf2a838f3090",
            "description": "Allow SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02bb8cf2a838f3090",
            "ingress": [
              {
                "cidr_blocks": [
                  "34.250.22.197/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Allow ssh from install vm",
            "name_prefix": "",
            "owner_id": "560460596452",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-039818767ea382385"
          },
          "dependencies": [
            "module.my-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my-ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkinstotest_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:560460596452:security-group/sg-04ebd6403e0689ef4",
            "description": "Allow SSH from jenkins vm to test vm",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04ebd6403e0689ef4",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "34.250.22.197/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Allow ssh from jenkins vm to test vm",
            "name_prefix": "",
            "owner_id": "560460596452",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-039818767ea382385"
          },
          "dependencies": [
            "module.my-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my-rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_3306",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:560460596452:security-group/sg-05903499b75d76dea",
            "description": "Allow 3306 inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05903499b75d76dea",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "3306 from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow_3306",
            "name_prefix": "",
            "owner_id": "560460596452",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-039818767ea382385"
          },
          "dependencies": [
            "module.my-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:560460596452:internet-gateway/igw-0b03e64e84cc08624",
            "id": "igw-0b03e64e84cc08624",
            "owner_id": "560460596452",
            "vpc_id": "vpc-039818767ea382385"
          },
          "dependencies": [
            "module.my-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c165096bcc1d17eb",
            "owner_id": "560460596452",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b03e64e84cc08624",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-039818767ea382385"
          },
          "dependencies": [
            "module.my-vpc.aws_internet_gateway.igw",
            "module.my-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0994b36994a76608e",
            "route_table_id": "rtb-0c165096bcc1d17eb",
            "subnet_id": "subnet-0dc0e9398f711cb31"
          },
          "dependencies": [
            "module.my-vpc.aws_internet_gateway.igw",
            "module.my-vpc.aws_route_table.rt",
            "module.my-vpc.aws_subnet.subnet_a",
            "module.my-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:560460596452:subnet/subnet-0dc0e9398f711cb31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0dc0e9398f711cb31",
            "map_public_ip_on_launch": true,
            "owner_id": "560460596452",
            "vpc_id": "vpc-039818767ea382385"
          },
          "dependencies": [
            "module.my-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:560460596452:subnet/subnet-00c77636be5bd841b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-00c77636be5bd841b",
            "map_public_ip_on_launch": false,
            "owner_id": "560460596452",
            "vpc_id": "vpc-039818767ea382385"
          },
          "dependencies": [
            "module.my-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:560460596452:subnet/subnet-0ae213cbcf40eaed1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0ae213cbcf40eaed1",
            "map_public_ip_on_launch": false,
            "owner_id": "560460596452",
            "vpc_id": "vpc-039818767ea382385"
          },
          "dependencies": [
            "module.my-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:560460596452:vpc/vpc-039818767ea382385",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-019365f382cd76913",
            "default_route_table_id": "rtb-05dac21adc892713b",
            "default_security_group_id": "sg-01a2e0739c2f551ae",
            "dhcp_options_id": "dopt-7e013a18",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-039818767ea382385",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05dac21adc892713b",
            "owner_id": "560460596452"
          }
        }
      ]
    }
  ]
}